[package]
name = "crabcloud-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[features]
# Sub-features are mutually exclusive and selected by the consumer:
# - `dx` (or `cargo build --target wasm32-...`) enables `web` for the WASM client.
# - Native server binaries that link `crabcloud-ui` enable `server`.
default = []
server = [
    "dioxus/server",
    "dep:axum",
    "dep:bcrypt",
    "dep:crabcloud-core",
    "dep:crabcloud-http",
    "dep:crabcloud-i18n",
]
web = ["dioxus/web"]

[dependencies]
dioxus = { workspace = true }
serde.workspace = true

# Server-only deps used inside `#[server]` function bodies and the server-side
# context bridge. Gated behind the `server` feature so the WASM build never
# sees them.
axum = { workspace = true, optional = true }
bcrypt = { workspace = true, optional = true }
crabcloud-core = { workspace = true, optional = true }
crabcloud-http = { workspace = true, optional = true }
crabcloud-i18n = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
