[package]
name = "crabcloud-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib"]

# A native `[[bin]]` target for the WASM client. `dx` compiles this against
# `wasm32-unknown-unknown` for the browser.
[[bin]]
name = "crabcloud-ui-web"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus-history.workspace = true
dioxus-router.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true

# Server-side rendering + asset serving — only compile on non-wasm targets.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum.workspace = true
dioxus-ssr.workspace = true

# Browser WASM — only compile when targeting wasm32.
#
# dioxus-web's `hydrate` feature is OFF by default: enabling it forces the
# launch loop into the hydration path even when `Config::hydrate(false)` is
# passed at runtime (`should_hydrate = config.hydrate || cfg!(feature = "hydrate")`).
# The hydration path requires a base64 blob in
# `window.initial_dioxus_hydration_data` that only dx 0.7's *fullstack*
# server pipeline produces, so with the feature on the WASM bundle's first
# call is `atob(undefined)` — JS-panicking before any virtual-DOM work runs.
# We render via `dioxus_ssr::pre_render` and then let `dioxus_web` plainly
# rebuild the same tree on top of `#main`; the fullstack migration that
# unlocks true hydration is tracked separately.
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true

[dev-dependencies]
crabcloud-cache.workspace = true
crabcloud-config = { workspace = true, features = ["test-support"] }
crabcloud-core.workspace = true
crabcloud-db.workspace = true
crabcloud-http.workspace = true
secrecy = { workspace = true, features = ["serde"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
