[package]
name = "crabcloud-users"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bcrypt.workspace = true
crabcloud-cache.workspace = true
crabcloud-config.workspace = true
crabcloud-db.workspace = true
email_address.workspace = true
hex.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
axum.workspace = true
crabcloud-app = { workspace = true, features = ["server"] }
crabcloud-config = { workspace = true, features = ["test-support"] }
crabcloud-core.workspace = true
crabcloud-http.workspace = true
dioxus.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true

[lints]
workspace = true
