[package]
name = "crabcloud-versions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
crabcloud-db.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true

[dev-dependencies]
crabcloud-config = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
