[package]
name = "crabcloud-zip"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
crabcloud-fs = { workspace = true }
crabcloud-storage = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "io-util"] }
tokio-util = { workspace = true, features = ["io", "io-util"] }
zip = { workspace = true }

[dev-dependencies]
crabcloud-config = { workspace = true }
crabcloud-db = { workspace = true }
crabcloud-filecache = { workspace = true }
crabcloud-users = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true
