[package]
name = "rustcloud-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rustcloud-config.workspace = true
secrecy.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
