[package]
name = "rustcloud-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bcrypt.workspace = true
cookie.workspace = true
hmac.workspace = true
hyper.workspace = true
rand.workspace = true
rustcloud-cache.workspace = true
rustcloud-config.workspace = true
rustcloud-core.workspace = true
rustcloud-i18n.workspace = true
rustcloud-ocs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
rustcloud-db.workspace = true
secrecy.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
