[package]
name = "rustcloud-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustcloud-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rustcloud-config.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
