[package]
name = "rustcloud-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustcloud-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
rustcloud-config.workspace = true
rustcloud-core.workspace = true
rustcloud-http.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
