[package]
name = "rustcloud-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib"]

# A native `[[bin]]` target for the WASM client. `dx` compiles this against
# `wasm32-unknown-unknown` for the browser.
[[bin]]
name = "rustcloud-ui-web"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus-history.workspace = true
dioxus-router.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Server-side rendering + asset serving — only compile on non-wasm targets.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum.workspace = true
dioxus-ssr.workspace = true

# Browser WASM — only compile when targeting wasm32.
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web.workspace = true
console_error_panic_hook.workspace = true

[dev-dependencies]
rustcloud-cache.workspace = true
rustcloud-config.workspace = true
rustcloud-core.workspace = true
rustcloud-db.workspace = true
rustcloud-http.workspace = true
secrecy = { workspace = true, features = ["serde"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
